2008-08-08  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

PR c/28152
	* c-parser.c (c_lex_one_token): Do not store the canonical spelling
	for keywords.
testsuite/
	* gcc.dg/parser-pr28152.c: New.
	* gcc.dg/parser-pr28152-2.c: New.
	


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139097 138bc75d-0d04-0410-961f-82ee72b054a4